--- a/react-app/package.json
+++ b/react-app/package.json
@@ -18,7 +18,8 @@
     "react-scripts": "^4.0.3",
     "redux": "^4.1.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "wavesurfer.js": "^6.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
