--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,10 @@
 
 -i https://pypi.org/simple
 alembic==1.6.5
-boto3==1.21.0
-botocore==1.24.0; python_version >= '3.6'
+boto3==1.21.20
+botocore==1.24.20; python_version >= '3.6'
 click==7.1.2
+colorthief==0.2.1
 flask-cors==3.0.8
 flask-login==0.5.0
 flask-migrate==3.0.1
@@ -23,13 +24,14 @@ jinja2==3.0.1
 jmespath==0.10.0; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 mako==1.1.4
 markupsafe==2.0.1
+pillow==9.0.1; python_version >= '3.7'
 python-dateutil==2.8.1
 python-dotenv==0.14.0
 python-editor==1.0.4
-s3transfer==0.5.1; python_version >= '3.6'
-setuptools==60.9.0; python_version >= '3.7'
+s3transfer==0.5.2; python_version >= '3.6'
+setuptools==60.10.0; python_version >= '3.7'
 six==1.15.0
 sqlalchemy==1.4.19
-urllib3==1.26.8; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
+urllib3==1.26.9; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
 werkzeug==2.0.1
 wtforms==2.3.3
