alter package.json and favicon pathing in __init__

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 FLASK_APP=app
 FLASK_ENV=development
-SECRET_KEY=lkasjdf09ajsdkfljalsiorj12n3490re9485309irefvn,u90818734902139489230
-DATABASE_URL=postgresql://starter_app_dev@localhost/starter_app
+SECRET_KEY=8468105e-7a73-44f4-a2ec-b3dbd9c2c34a
+DATABASE_URL=postgresql://eight_track_app_dev_db@localhost/eight_track_app
